# benchmarkdown

./: .env.template  .gitignore  .task_queue.json  AGENTS.md  CLAUDE.md  CONFIG_UI_README.md  DONE.md  IMPLEMENTATION_GAPS.md  README.md  TODO.md  UI_README.md  UI_REFACTORING_GUIDE.md  app.py  app_with_config.py  pyproject.toml  test_config_ui.py  test_integrated_app.py  test_logging.py  test_markdown_rendering.py  test_persistence.py  test_redesigned_workflow.py
.claude/: settings.local.json
benchmarkdown/: __init__.py  config.py  config_ui.py  docling.py  ocr_config_ui.py  pdf_metadata.py  profile_manager.py  textract.py  types.py  ui.py
config/: accurate.json  agentic.json  agentic_plus.json  auto.json  basic.json  bedrock_qwen3vl235b.json  bedrock_sonnet_45.json  costeffective.json  default.json  easyocr_full_page.json  layout.json  layouttable.json  noocr.json  table.json  test_full_page_ocr.json
docs/: ENVIRONMENT_VARIABLES.md  INDEX.md  OCR_ENGINE_SELECTION.md  benchmarkdown-intro-article.md
examples/: dynamic_ui_demo.py
notebooks/: docling.ipynb  docling_test.py  hello.ipynb  pymupdf.ipynb  textract.ipynb
scripts/: run_readoc_benchmark.py
tests/: README.md  test_app_simple.py  test_app_with_azure.py  test_app_with_validation.py  test_azure_component_count.py  test_azure_config_refactoring.py  test_azure_document_intelligence.py  test_browser.py  test_config_extraction.py  test_config_ui.py  test_env_vars.py  test_full_persistence.py  test_gt_upload_list.py  test_integrated_app.py  test_metrics_basic.py  test_multiple_configs.py  test_ocr_engines.py  (+10 more)
(+62 files in other folders)
